Fix mobile inbox requests (#870)
* fix: mobile inbox request does not take session


* ipfs: permanently add bootstap peers to peer table on start


* service: update message handlign to latest libp2p


* service: properly inc attempts from failed unstore requests


* chore: remove nodejs dependency

This is a golang project. As such, requiring users to install nodejs is not idiomatic.


* test: revert removal of add peer to store


* cmd: add publish command


* docs: update swagger docs


* chore: replace main files with named versions
